<resources>

    <string name="app_name" translatable="false">Sked</string>
    <!--<string name="main_activity_title" translatable="false">@string/app_name</string>-->


    <!-- Login screen -->
    <string name="login_error_schedule">Error fetching schedule</string>

    <string name="login_no_connection">Waiting for connection…</string>
    <string name="login_load_schedule">Load schedule</string>

    <!-- Login student screen -->
    <string name="login_faculty">Faculty</string>
    <string name="login_course">Course</string>
    <string name="login_group">Group</string>
    <string name="login_student">Student</string>
    <string name="login_error_faculties">Error fetching faculties</string>
    <string name="login_error_courses">Error fetching courses</string>
    <string name="login_error_groups">Error fetching groups</string>
    <string name="login_error_students">Error fetching students</string>

    <!-- Login teacher screen -->
    <string name="login_department">Department</string>
    <string name="login_teacher">Teacher</string>
    <string name="login_error_departments">Error fetching departments</string>
    <string name="login_error_teachers">Error fetching teachers</string>


    <!-- Notification -->
    <string name="notification_schedule_updated_title" translatable="false">@string/app_name</string>
    <string name="notification_schedule_updated_successfully">Schedule has been updated</string>
    <string name="notification_schedule_updated_unsuccessfully">Failed to update schedule</string>


    <!-- Navigation drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <string name="day_of_week_monday">Monday</string>
    <string name="day_of_week_tuesday">Tuesday</string>
    <string name="day_of_week_wednesday">Wednesday</string>
    <string name="day_of_week_thursday">Thursday</string>
    <string name="day_of_week_friday">Friday</string>
    <string name="day_of_week_saturday">Saturday</string>
    <string name="day_of_week_sunday">Sunday</string>


    <!-- Settings -->
    <string name="settings_title">Settings</string>

    <string name="pref_notifications_header">Notifications</string>
    <string name="pref_appearance_header">Appearance</string>

    <string name="pref_notifications_schedule_updates_title">Schedule updates</string>
    <string name="pref_notifications_schedule_updates_summary">Notify when schedule updates</string>

    <string name="pref_theme_header">Theme</string>
    <string name="settings_schedule_update_time">Schedule was updated at</string>

    <string-array name="pref_theme_themes">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>

    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

    <string name="pref_first_day_of_week_header">First day of week</string>

    <string-array name="pref_first_day_of_week_days">
        <item>Monday</item>
        <item>Sunday</item>
        <item>Based on locale</item>
    </string-array>

    <string-array name="pref_first_day_of_week_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <!-- Navigation -->
    <string name="nav_by_day_schedule">Day</string>
    <string name="nav_by_week_schedule">Week</string>
    <string name="nav_relogin">Relogin</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_update">Update</string>
    <string name="nav_audiences" translatable="false">@string/audiences_title</string>


    <!-- About screen -->
    <string name="about_activity_title">About</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_version_name" translatable="false">Sked v%1$s.</string>
    <string name="about_developed_by">Developed by Anton Kozyriatskyi</string>


    <!-- Audiences screen -->
    <string name="audiences_title">Audiences</string>
    <string name="audiences_loading_error">Error loading audiences</string>
    <string name="audiences_loading_retry" translatable="false">@string/retry</string>
    <string name="audience_status_free">Free</string>
    <string name="audience_status_busy">Busy</string>
    <string name="audience_status_na" translatable="false">@string/na</string>
    <string name="audience_sheet_title">Date and time</string>
    <string name="audience_sheet_select_btn">Choose</string>
    <string name="audience_sheet_date_title">Date</string>
    <string name="audience_sheet_start_time_title">Start</string>
    <string name="audience_sheet_end_time_title">End</string>


    <!-- Lesson details sheet -->
    <string name="lesson_details_name">Name:</string>
    <string name="lesson_details_type">Type:</string>
    <string name="lesson_details_number">Number:</string>
    <string name="lesson_details_room">Room:</string>
    <string name="lesson_details_who_groups">Group(s):</string>
    <string name="lesson_details_who_teacher">Teacher:</string>
    <string name="lesson_details_time">Time:</string>
    <string name="lesson_details_date">Date:</string>
    <string name="lesson_details_added_on">Added on:</string>


    <!-- Other strings -->
    <string name="ok" translatable="false">OK</string>
    <string name="na" translatable="false">N/A</string>

    <string name="intro_title">Choose your side</string>
    <string name="no_lessons">No lessons</string>

    <string name="exit">Exit</string>
    <string name="retry">Retry</string>

</resources>