<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="kozyriatskyi.anton.sked.about.AboutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/about_toolbar"
        app:title="@string/about_title"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version_name"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/about_developed_by" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/about_tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:text="@string/about_privacy_policy"
            android:textColor="@color/redAс100" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/dividerColor"
            android:padding="8dp" />

        <TextView
            android:id="@+id/about_tv_vk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="VK"
            android:textColor="#2d76ff"
            android:visibility="gone" />

        <TextView
            android:id="@+id/about_tv_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="Telegram"
            android:textColor="@color/blue300" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/about_rv_libraries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="8dp" />

</LinearLayout>
