<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audience_sheet_root"
    android:orientation="vertical"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:parentTag="android.widget.LinearLayout">

    <FrameLayout
        android:id="@+id/audiences_sheet_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/audiences_sheet_header_height"
        android:background="?colorAccent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/audiences_time_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="start|center_vertical"
                android:text="@string/audience_sheet_title" />

            <TextView
                android:id="@+id/audiences_time_save_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/audience_sheet_select_btn"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/audiences_time_up_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/audiences_time_save_text"
                android:layout_alignLeft="@id/audiences_time_save_text"
                android:layout_alignEnd="@id/audiences_time_save_text"
                android:layout_alignRight="@id/audiences_time_save_text"
                android:layout_centerVertical="true"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_up_white_24dp" />

        </RelativeLayout>

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground">

        <ProgressBar
            android:id="@+id/audiences_time_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/audiences_time_date_edittext"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/audiences_time_start_spinner"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/audiences_time_start_spinner"
            app:layout_constraintTop_toBottomOf="@+id/audiences_time_progress"
            tools:text="23.10.2018" />

        <TextView
            android:id="@+id/audiences_time_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/audience_sheet_date_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/audiences_time_date_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/audiences_time_date_edittext" />

        <TextView
            android:id="@+id/audiences_time_end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/audience_sheet_start_time_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audiences_time_date_edittext" />

        <TextView
            android:id="@+id/audiences_time_start_text"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/audience_sheet_end_time_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audiences_time_end_text" />

        <Spinner
            android:id="@+id/audiences_time_start_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@id/audiences_time_end_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/audiences_time_end_text"
            app:layout_constraintTop_toTopOf="@id/audiences_time_end_text" />

        <Spinner
            android:id="@+id/audiences_time_end_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@id/audiences_time_start_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/audiences_time_start_text"
            app:layout_constraintTop_toTopOf="@id/audiences_time_start_text" />

    </android.support.constraint.ConstraintLayout>

</merge>